--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    lor>
+    <color name="orange_200">#FFCD80</color>
+    <color name="orange_300">#FFB84D</color>
+    <color name="orange_500">#FF9800</color>
+    <color name="orange_700">#F57D00</color>
 </resources>
