Add id to more components in fragment_login.xml
id added -
    1: aadhaar_number
    2: password
    3: login_button

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,6 +41,7 @@
         android:inputType="text" />
 
     <Button
+        android:id="@+id/login_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/login"
