--- a/app/src/main/res/layout/voter_menu.xml
+++ b/app/src/main/res/layout/voter_menu.xml
@@ -19,7 +19,10 @@
         android:layout_rowWeight="1"
         app:cardElevation="6dp"
         app:cardCornerRadius="12dp"
-        android:layout_margin="10dp">
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="6dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -50,7 +53,10 @@
         android:layout_rowWeight="1"
         app:cardElevation="6dp"
         app:cardCornerRadius="12dp"
-        android:layout_margin="12dp">
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="12dp">
 
         <LinearLayout
             android:orientation="vertical"
