--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0"/>
 
     <FrameLayout
-        android:id="@+id/login_container"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
