--- a/app/src/main/res/layout/voter_menu.xml
+++ b/app/src/main/res/layout/voter_menu.xml
@@ -13,6 +13,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/my_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
