--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#9E9E9E</color>
     lor>
     <color name="orange_200">#FFCD80</color>
     <color name="orange_300">#FFB84D</color>
