Configure sign up and verify otp files

--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -99,6 +99,7 @@
         android:textSize="14sp" />
 
     <Button
+        android:id="@+id/continue_button"
         android:background="@drawable/login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
