--- a/app/src/main/res/layout/fragment_verify_otp.xml
+++ b/app/src/main/res/layout/fragment_verify_otp.xml
@@ -51,6 +51,7 @@
             android:gravity="center">
 
             <EditText
+                android:id="@+id/code_1"
                 android:layout_width="40dp"
                 android:layout_height="45dp"
                 android:gravity="center"
@@ -62,6 +63,7 @@
                 android:textStyle="bold"/>
 
             <EditText
+                android:id="@+id/code_2"
                 android:layout_width="40dp"
                 android:layout_height="45dp"
                 android:gravity="center"
@@ -73,6 +75,7 @@
                 android:textStyle="bold"/>
 
             <EditText
+                android:id="@+id/code_3"
                 android:layout_width="40dp"
                 android:layout_height="45dp"
                 android:gravity="center"
@@ -84,6 +87,7 @@
                 android:textStyle="bold"/>
 
             <EditText
+                android:id="@+id/code_4"
                 android:layout_width="40dp"
                 android:layout_height="45dp"
                 android:gravity="center"
@@ -95,6 +99,7 @@
                 android:textStyle="bold"/>
 
             <EditText
+                android:id="@+id/code_5"
                 android:layout_width="40dp"
                 android:layout_height="45dp"
                 android:gravity="center"
@@ -106,6 +111,7 @@
                 android:textStyle="bold"/>
 
             <EditText
+                android:id="@+id/code_6"
                 android:layout_width="40dp"
                 android:layout_height="45dp"
                 android:gravity="center"
@@ -141,6 +147,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/verify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
