--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,10 +40,11 @@
     </com.google.android.material.tabs.TabLayout>
 
     <EditText
-        android:id="@+id/signup_aadhaar"
+        android:id="@+id/login_aadhaar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/aadhaar_number"
+        android:maxLength="12"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -58,7 +59,7 @@
         android:inputType="number" />
 
     <EditText
-        android:id="@+id/signup_password"
+        android:id="@+id/login_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -70,7 +71,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_aadhaar"
+        app:layout_constraintTop_toBottomOf="@+id/login_aadhaar"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintWidth_percent="0.8"
         android:inputType="text" />
@@ -99,9 +100,9 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/signup_password"
+        app:layout_constraintEnd_toEndOf="@+id/login_password"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_password" />
+        app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
     <LinearLayout
         android:id="@+id/sign_up"
