--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_aadhaar"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintWidth_percent="0.8"
-        android:inputType="text" />
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/login_button"
