--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -19,6 +19,7 @@
         app:layout_constraintVertical_bias="0" />
 
     <TextView
+        android:id="@+id/details_text_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
@@ -64,6 +65,7 @@
                     android:textSize="13sp" />
 
                 <TextView
+                    android:id="@+id/details_aadhaar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -95,6 +97,7 @@
                     android:textSize="13sp" />
 
                 <TextView
+                    android:id="@+id/details_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -126,6 +129,7 @@
                     android:textSize="13sp" />
 
                 <TextView
+                    android:id="@+id/details_date_of_birth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -156,6 +160,7 @@
                     android:textSize="13sp" />
 
                 <TextView
+                    android:id="@+id/details_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -186,6 +191,7 @@
                     android:textSize="13sp" />
 
                 <TextView
+                    android:id="@+id/details_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
