--- a/app/src/main/res/layout/edit_voter.xml
+++ b/app/src/main/res/layout/edit_voter.xml
@@ -76,6 +76,7 @@
                     android:textColor="#000000"
                     android:inputType="number"
                     android:textSize="18sp"
+                    android:maxLength="12"
                     android:layout_marginBottom="2dp"/>
 
             </LinearLayout>
@@ -158,6 +159,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-light"
                     android:text="+91-73553-78114"
+                    android:maxLength="10"
                     android:textColor="#000000"
                     android:inputType="phone"
                     android:textSize="18sp"
