--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -91,6 +91,7 @@
         app:layout_constraintWidth_percent="0.8"/>
 
     <TextView
+        android:id="@+id/forgotten_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forgotten_password"
