--- a/app/src/main/res/layout/fragment_commissioner_menu.xml
+++ b/app/src/main/res/layout/fragment_commissioner_menu.xml
@@ -48,6 +48,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/vote_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
