--- a/app/src/main/res/layout/fragment_commissioner_menu.xml
+++ b/app/src/main/res/layout/fragment_commissioner_menu.xml
@@ -144,7 +144,7 @@
 
             <TextView
                 android:layout_marginTop="12dp"
-                android:text="@string/voter_list"
+                android:text="Reset votes"
                 android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
